# qwc-ldap-auth

./: Dockerfile  README.md  forms.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-ldap-auth.json
src/: server.py
src/static/: style.css
src/templates/: base.html  login.html
static/: style.css
templates/: base.html  login.html
translations/: auth.de.json  auth.en.json
